# python_gui

./: README.md  main.py  pyproject.toml
pages/: login_page.py  main_page.py
