[tool.poetry]
name = "python-win-ui"
version = "0.1.0"
description = "This is a python project for learning python in windows"
authors = ["Abdullah <iabdullahkhan438@gmail.com>"]
readme = "README.md"
packages = [{include = "python_win_ui"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
